[project]
name = "ph_news"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.5",
    "dagster-dbt>=0.27.5",
    "dbt-postgres>=1.9.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ph_news"
registry_modules = [
    "ph_news.components.*",
]


